# cortex-ai-automation

./: .env.example  .gitignore  .gitleaks.toml  .lighthouserc.js  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  Makefile.pipeline  ONBOARDING.md  PLAN-9PLUS-EKSIKLER.md  PLAN-9PLUS.md  PLAN-FRONTIER-2030.md  PLAN-MASTER.md  PLAN-ULTIMATE-10.md  README.md  docker-compose.ai.yml  docker-compose.demo.yml  docker-compose.observability.yml  docker-compose.prod.yml  docker-compose.yml  ecosystem.config.js  package-lock.json  package.json  playwright.config.ts  setup.cfg  start-all.sh  tsconfig.base.json  tsconfig.bdd.json  turbo.json
.github/: CODEOWNERS  dependabot.yml
agent_trio/: agents.py  dashboard.html  server.py
ai-gateway/: .env.example  Dockerfile  main.py  requirements.txt
api-tests/: .env.test  pytest.ini
archive/: README.md
backend/: .env.example  Dockerfile  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml
desktop/: README.md  package-lock.json  package.json
docs/: ADR-001-backend-engine-separation.md  AGENT_ACTIVE_WORK.md  AI_OTOMASYON_GELISTIRME_PLANI.md  AI_TEST_OTOMASYON_RAPORU.md  AI_Test_Automation_Research_Report.md  ARCHITECTURE_PLAN.md  INDEX.md  MASTER.md  (+48 more)
legacy/2026-05-cleanup/wt-editor-routes/synthetic-data/platform/projects/E2E Test Projesi/: pyproject.toml
legacy/2026-05-cleanup/wt-editor-routes/synthetic-data/platform/projects/E2E Test Projesi/pages/: home_page.py  login_page.py
legacy/2026-05-cleanup/wt-editor-routes/synthetic-data/platform/projects/E2E Test Projesi/tests/: test_login.py
(+4865 files in other folders)
